2012-06-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/basic_actions.cpp:
	- Neck_TurnToBallを修正．敵のボール捕捉サイクル数が1以下の場合はボー
	ル方向へ確実に首を向けるルールを追加

	* rcsc/player/self_intercept_v13.cpp:
	- 全方位インターセプトを修正．成功判定条件が誤っていた

2012-06-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_go_to_point.cpp:
	- ゴールポストとの衝突回避アルゴリズムのバグを修正

	* rcsc/player/player_intercept.cpp:
	- 他のプレイヤへのボーナスステップを修正．ceil(信頼性カウント*0.5)に変更

2012-06-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/player_intercept.cpp:
	- 敵味方共にボーナスステップを信頼性カウント-1に変更

2012-06-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_go_to_point.cpp:
	- デバッグメッセージ修正

2012-06-09  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/ball_object.cpp:
	* rcsc/player/ball_object.h:
	* rcsc/player/world_model.cpp:
	- 味方がボールキック可能と推定された場合もボール速度を0にするルールを追加

2012-06-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- バージョン文字列をrc12へ更新

	* rcsc/player/world_model.cpp:
	- lastKickerUnum()を追加．精度は保証されない．自分自身がキックした
	場合のみ，確実に記録される

2012-06-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 相対位置の差分による速度更新に失敗した場合に，絶対位置の差分によ
	る速度更新を行う機能を追加

	* rcsc/formation/formation.cpp:
	- 不要なコンソール出力を削除

	* rcsc/action/body_stop_dash.cpp:
	- ほぼ同じ効果が得られる場合はスタミナ消費が小さいものを選択するように変更

	* rcsc/common/stamina_model.cpp:
	* rcsc/common/stamina_model.h:
	- getSafetyDashPower()の第3引数で残すスタミナの値を指定できるように変更

	* rcsc/geom/line_2d.h:
	- インデント修正

2012-06-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_kick_to_relative.cpp:
	* rcsc/action/body_kick_to_relative.h:
	- 敵の妨害チェック関数を追加．実際にはまだ使用していない
	- 変数名命名規則の統一

	* rcsc/action/body_hold_ball2008.cpp:
	- ボールをキープする距離をkickable_margin*0.7から*0.5へ変更

2012-06-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation.cpp:
	* rcsc/formation/formation.h:
	- フォーメーション設定ファイルにコメントを書き込むメソッドを追加

2012-06-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>
